--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -40,6 +40,15 @@
 					right: 0
 					font-size: 14px
 					width: 40px
+	.about-wrap
+		h3
+			text-align: center
+	.service
+		flex-wrap: wrap	
+		justify-content: center
+		&__description
+			margin-top: 20px	
+		
 
 /* Extra Small Devices, Phones (sm)*/
 @media only screen and (max-width : 576px)
