--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -3,3 +3,4 @@
 +font-face("robotoReg", "../fonts/RobotoRegular/RobotoRegular")
 +font-face("robotoBol", "../fonts/RobotoBold/RobotoBold")
 +font-face("robotoLig", "../fonts/RobotoLight/RobotoLight")
++font-face("linea", "../fonts/Linea/linea-basic-10")
