--- a/sass/_libs.sass
+++ b/sass/_libs.sass
@@ -1,2 +1,4 @@
 @import "../libs/bootstrap-grid/bootstrap-grid"
 @import "../libs/hamburgers/hamburgers.min"
+@import "../libs/owlcarusel/owl.carousel.min"
+/* @import "../libs/owlcarusel/owl.theme.default.min" */
