--- a/sass/main.sass
+++ b/sass/main.sass
@@ -71,7 +71,7 @@ h1, h2, h3
 
 .s-gray
 	background-color: #ebebeb
-.s-darck
+.s-dark
 	background-color: #000
 section
 	padding-top: 80px
@@ -425,4 +425,102 @@ section
 			h3
 				color: $accent
 
+.list
+	max-width: 700px
+	padding-left: 0
+	margin: 0 auto
+	overflow: hidden
+	border-radius: 5px
+	li
+		list-style-type: none
+		text-align: center
+	.ask
+		background-color: #F23F36
+		cursor: pointer
+		color: #ffffff
+		text-transform: uppercase
+		padding: 10px 0
+	.que
+		display: none
+		margin: 10px 0
+
+.owl-work
+	margin-top: 50px
+	text-align: center
+	&__img
+		position: relative
+	&__hover
+		position: absolute
+		top: 0
+		left: 0
+		width: 100%
+		height: 100%
+		background-color: rgba(0,0,0, .5)
+		opacity: 0
+		transition: all .3s ease
+		&:hover
+			opacity: 1
+	&__hex
+		display: flex
+		justify-content: center
+		align-items: center
+		position: relative
+		width: 60px
+		height: 34.64px
+		background-color: transparent
+		margin: 17.32px 0
+		border-left: solid 1px #fff
+		border-right: solid 1px #fff
+		&:before, &:after
+			content: ""
+			position: absolute
+			z-index: 1
+			width: 42.43px
+			height: 42.43px
+			transform: scaleY(0.5774) rotate(-45deg)
+			background-color: inherit
+			left: 7.7868px
+		&:before
+			top: -21.2132px
+			border-top: solid 1.4142px #fff
+			border-right: solid 1.4142px #fff
+		&:after
+			bottom: -21.2132px
+			border-bottom: solid 1.4142px #fff
+			border-left: solid 1.4142px #fff
+		a
+			z-index: 10
+			color: #fff
+			font-size: 25px
+			font-family: linea
+		&:hover
+			background-color: $accent
+			border-color: $accent
+			&:before
+				border-color: inherit
+			&:after
+				border-color: inherit
+		&_top
+			position: absolute
+			top: 50%
+			left: 50%
+			margin-left: -47px
+			margin-top: -45px
+		&_bottom
+			position: absolute
+			top: 50%
+			left: 50%
+			margin-left: -13px
+			margin-top: 15px
+	.owl-nav
+		.owl-prev, .owl-next
+			color: #fff
+			position: absolute
+			top: 50%
+			margin-top: -30px
+		.owl-prev
+			left: 5px
+		.owl-next
+			right: 5px	
+	
 @import "media" // Всегда в конце
