--- a/sass/main.sass
+++ b/sass/main.sass
@@ -522,5 +522,27 @@ section
 			left: 5px
 		.owl-next
 			right: 5px	
+
+.subscribe-form
+	display: flex
+	align-items: center
+	justify-content: center
+	margin-top: 30px
+	&__email
+		min-width: 740px
+		height: 90px
+		border: none
+		font-size: 40px
+		padding-left: 35px
+	&__btn
+		height: 105px
+		width: 175px
+		font-family: linea
+		font-size: 80px
+		background-color: $accent
+		border: none
+		color: #fff
+		margin-left: -3px
+		cursor: pointer
 	
 @import "media" // Всегда в конце
