--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -17,6 +17,21 @@
 		margin-top: 120px
 		p
 			font-size: 40px
+	.subscribe-form
+		flex-direction: column
+		flex-wrap: nowrap
+		&__email
+			width: 250px
+			height: 50px
+			font-size: 25px
+			padding-left: 15px
+		&__btn
+			margin-top: 20px
+			height: 80px
+			width: 150px
+			font-size: 60px
+			&:after, &:before
+				display: none
 
 
 /* Small Devices, Tablets (md)*/
