--- a/sass/_libs.sass
+++ b/sass/_libs.sass
@@ -1,4 +1,5 @@
 @import "../libs/bootstrap-grid/bootstrap-grid"
 @import "../libs/hamburgers/hamburgers.min"
 @import "../libs/owlcarusel/owl.carousel.min"
+@import "../libs/fontawesome/fontawesome-all.min"
 /* @import "../libs/owlcarusel/owl.theme.default.min" */
