--- a/sass/_fonts.sass
+++ b/sass/_fonts.sass
@@ -4,3 +4,6 @@
 +font-face("robotoBol", "../fonts/RobotoBold/RobotoBold")
 +font-face("robotoLig", "../fonts/RobotoLight/RobotoLight")
 +font-face("linea", "../fonts/Linea/linea-basic-10")
++font-face("fB", "../fonts/FontawesomeBrands/fa-brands-400")
++font-face("fR", "../fonts/FontawesomeRegular/fa-regular-400")
++font-face("fS", "../fonts/FontawesomeSolid/fa-solid-900")
