--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -8,6 +8,18 @@
 		margin-top: 90px
 		p
 			font-size: 60px
+	.contact-form
+		&__input
+			height: 40px
+		&__submit
+			top: 484px
+			width: 200px
+			height: 80px
+		&__btn
+			height: 60px
+			font-size: 25px
+			width: 70px
+			
 
 
 
@@ -77,7 +89,9 @@
 
 /* Custom, iPhone Retina (xs)*/
 @media only screen and (max-width : 320px)
-	/**/
+	.title-section
+		h1
+			font-size: 40px
 
 
 /*==========  Mobile First  ==========*/
