--- a/sass/main.sass
+++ b/sass/main.sass
@@ -537,27 +537,11 @@ section
 		font-size: 40px
 		padding-left: 35px
 		z-index: 10
-	&__btn
-		position: relative
-		&:after, &:before
-			left: 0
-			position: absolute
-			content: ""
-			width: 15px
-			height: 15px
-			background-color: $accent
-			opacity: .99
-		&:after
-			bottom: 0
-			transform: rotate(-45deg)
-			transform-origin: left bottom
-		&:before
-			top: 0
-			transform: rotate(45deg)
-			transform-origin: left top
-			
-
-.subscribe-btn
+		
+.btn
+	display: flex
+	justify-content: center
+	align-items: center
 	height: 105px
 	width: 175px
 	font-family: linea
@@ -567,5 +551,169 @@ section
 	color: #fff
 	cursor: pointer
 	margin: 0
+	position: relative
+	z-index: 9
+	&:after, &:before
+		left: -10px
+		position: absolute
+		content: ""
+	&:after
+		bottom: 0
+		border-top: 10px solid darken($accent, 8%)
+		border-left: 10px solid transparent
+	&:before
+		top: 0
+		width: 0
+		height: 0
+		border-bottom: 10px solid darken($accent, 8%)
+		border-left: 10px solid transparent
 	
+.s-contact
+	background-color: #2d292d
+	background-size: cover
+	background-position: center top
+	position: relative
+	&:before
+		position: absolute
+		top: 0
+		left: 0
+		content: ''
+		background-color: rgba(0,0,0, .65)
+		width: 100%
+		height: 100%
+
+.contact-form
+	&__wrap
+		display: flex
+		justify-content: center
+		flex-wrap: wrap
+	&__grid
+		display: flex
+		flex-direction: column
+		flex-basis: 445px
+		margin: 0 15px
+	&__inner
+		display: flex
+		justify-content: center
+		align-items: center
+		margin-top: 20px
+	&__input
+		margin-right: -1px
+		height: 50px
+		flex-basis: 365px
+	&__textarea
+		flex-basis: 920px
+		margin-top: 25px
+		height: 150px
+	&__input, &__textarea
+		border: 1px solid #fff
+		background-color: transparent
+		font-family: robotoLig
+		padding-left: 10px
+		font-size: 18px
+		color: #fff
+		&::-webkit-input-placeholder
+			color: #fff
+			opacity: 1
+		&:-moz-placeholder
+			color: #fff
+			opacity: 1
+		&::-moz-placeholder
+			color: #fff
+			opacity: 1
+		&:-ms-input-placeholder
+			color: #fff
+			opacity: 1
+		&[placeholder] 
+			text-overflow: ellipsis
+		&:focus::-webkit-input-placeholder 
+			color: transparent
+			border-color: $blue
+		&:focus::-moz-placeholder         
+			color: transparent
+		&:focus:-moz-placeholder          
+			color: transparent
+		&:focus:-ms-input-placeholder     
+			color: transparent
+		&:focus:required:invalid,
+		&:focus:required:invalid
+			color: $accent
+		&:required:valid,
+		&:required:valid
+			color: $green
+	&__btn
+		height: 70px
+		width: 80px
+		font-size: 30px
+		cursor: auto
+	&__submit
+		position: absolute
+		height: 89px
+		width: 221px
+		top: 344px
+		font-family: robotoLig
+		font-size: 36px
+		text-transform: uppercase
+		&:after
+			display: none
+
+.social
+	display: flex
+	justify-content: center
+	flex-wrap: wrap
+	margin-top: 160px
+	&__grid
+		display: flex
+	&__item
+		margin: 5px 5px
+	&__hex
+		display: flex
+		justify-content: center
+		align-items: center
+		position: relative
+		width: 50px
+		height: 28.87px
+		background-color: transparent
+		margin: 14.43px 0
+		border-left: solid 1px #ffffff
+		border-right: solid 1px #ffffff
+		&:before, &:after
+			content: ""
+			position: absolute
+			z-index: 1
+			width: 35.36px
+			height: 35.36px
+			transform: scaleY(0.5774) rotate(-45deg)
+			background-color: inherit
+			left: 6.3223px
+		&:before
+			top: -17.6777px
+			border-top: solid 1.4142px #ffffff
+			border-right: solid 1.4142px #ffffff
+		&:after
+			bottom: -17.6777px
+			border-bottom: solid 1.4142px #ffffff
+			border-left: solid 1.4142px #ffffff
+		&:hover
+			background-color: $accent
+			border-color: $accent
+			&:before, &:after
+				border-color: $accent
+		a
+			z-index: 100
+			i
+				font-family: fB
+				font-size: 25px
+				color: #fff
+
+.foot
+	background-color: #000
+	&__text
+		color: #fff
+		padding: 30px 0
+		text-align: center
+		text-transform: uppercase
+	&__red
+		color: $accent
+
 @import "media" // Всегда в конце
