--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -19,6 +19,8 @@
 			height: 60px
 			font-size: 25px
 			width: 70px
+		&__textarea
+			flex-basis: 600px
 			
 
 
@@ -75,7 +77,9 @@
 		justify-content: center
 		&__description
 			margin-top: 20px	
-		
+	.done
+		.h3
+			font-size: 20px
 
 /* Extra Small Devices, Phones (sm)*/
 @media only screen and (max-width : 576px)
@@ -85,6 +89,10 @@
 			font-size: 25px
 	.wrap-hex-head
 		top: -150px
+		.logo
+			top: 150px
+			left: 49px
+			width: 90px
 
 
 /* Custom, iPhone Retina (xs)*/
@@ -92,7 +100,9 @@
 	.title-section
 		h1
 			font-size: 40px
-
+	.done
+		.h3
+			font-size: 15px
 
 /*==========  Mobile First  ==========*/
 
